--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "env-cmd": "^10.1.0",
+    "express-fileupload": "^1.2.1",
     "firebase": "^8.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "redux-thunk": "^2.3.0",
     "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "zustand": "^3.5.7"
